--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Fira+Code:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="public/favicon.png" type="image/x-icon">
+
 
     <meta property="og:title" content="ClonePayload - JSON Payload Duplicator" />
     <meta property="og:description" content="Generate multiple cloned JSON payloads with incremented timestamps" />
